update 'person' template

--- a/src/bot/menu_templates/person.html
+++ b/src/bot/menu_templates/person.html
@@ -1,4 +1,4 @@
-<b>◻️ {{person_first_name}} {{person_last_name}} ◻️</b>
+<b>◻️ <a href="https://vk.com/id{{person.vk_id}}">{{person_first_name}} {{person_last_name}}</a> ◻️</b>
 
 <em><b>Баллы</b> — меню просмотра и изменения баллов</em>
 
